feat(dj): add Get + PATCH endpoints with Swagger annotations
